--- a/public/404.html
+++ b/public/404.html
@@ -2,26 +2,187 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta charset="utf-8">
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+  <title>Quidnunc RE: not the page you're looking for.</title>
+  <style>
+
+  /* colors:
+    headlines orange: #f56b23;
+    background blue: #056690;
+
+  */
+
+  /* High level containers */
+  body {
+    color: black;
+    font: normal 0.95em helvetica, arial, sans-serif;
+    line-height: 1.5;
+    padding: 0px;
+    margin: 0px; }
+
+  #page_container {
+    background-image:url('diamond-background.jpg');
+    background-repeat:repeat-x;
+    background-color: white;
+    position: absolute;
+    min-height: 640px;
+    color: black;
+    width: 100%; }
+
+  #content {
+    box-shadow: 0px 1px 17px 1px #323453;
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+    border-color: #ccc;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    width: 900px;
+    margin: 36px auto;
+    position: relative;
+    padding: 16px;
+    padding-right: 55px;
+    min-height: 240px;
+    /*  display: inline;*/ }
+
+  #top-spacer {
+    background-color: #056690;
+    height: 4px;
+    margin: auto;
+  }
+
+  #header {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    height: 130px;
+    width: 900px;
+    background-color: white;
+    vertical-align: middle;
+  }
+
+  #logo {
+    margin-top: 22px;
+    display: inline-block;
+  }
+
+  .logo-element {
+    float: left;
+    display: inline-block;
+    margin-right: 20px;
+  }
+
+  #navbar {
+    color: #f56b23;
+    background-color: #fafafa;
+    margin-top: -16px;
+    margin-left: -16px;
+    margin-right: -54px;
+    padding: 6px;
+    padding-left: 14px;
+    font-size: 13px;
+    border-bottom: 1px solid #cabaa0;
+  }
+
+  #navbar a {
+    color: #f56b23;
+    hover: underline;
+  }
+
+  #footer {
+    position: relative;
+    font-size: 8pt;
+    padding-right: 15px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    color: gray; }
+
+  /* Headings */
+  h1 {
+    margin: 2px;
+    font-size: 22pt;
+    font-weight: lighter;
+    color: #f56b23 !important; }
+
+  h2 {
+    font-size: 1.4em;
+    font-weight: lighter;
+    color: #333333; }
+
+  /* Text */
+  p {
+    padding: 0px;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    margin-left: 0px;
+    margin-right: 0px; }
+
+  /* Links */
+
+  a {
+    color: #000051;
+    text-decoration: none;
+  }
+
+  #footer a {
+    color: gray;
+    text-decoration: underline; }
+
+  #main {
+    width: 600px;
+    min-height: 240px;
+    padding-right: 10px;
+    padding-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 40px;
+    border-right: 1px solid #f56b23;
+  }
+
+  h2 {
+    margin-bottom: 0px; }
+
+  .separator {
+    height: 1px;
+    margin-top: 5px;
+    clear: both; }
+
   </style>
 </head>
-
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+<div id="top-spacer"> </div>
+
+<div id="header">
+  <div id="logo">
+    <h1>Quidnunc RE: Page not found.</h1>
+  </div>
+
+
+</div>
+
+
+
+  <div id="page_container">
+
+    <div id="content">
+
+    <div id="navbar">
+      <a href="http://www.quidnuncre.com">Back to home</a>
+    </div>
+
+
+      <div id="main">
+        <h2>The page you were looking for doesn't exist.</h2>
+        <p>You may have mistyped the address or the page may have moved.</p>
+      </div>
+
+      <div id="navigation">
+
+
+
+      </div>
+
+      <div id="footer">Quidnunc RE. &#9400;  2013.</div>
+    </div>
   </div>
 </body>
 </html>
