adjust path for bg-img for 404

--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,7 @@
     margin: 0px; }
 
   #page_container {
-    background-image:url('diamond-background.jpg');
+    background-image:url('/diamond-background.jpg');
     background-repeat:repeat-x;
     background-color: white;
     position: absolute;
