--- a/public/404.html
+++ b/public/404.html
@@ -153,7 +153,7 @@
 
 <div id="header">
   <div id="logo">
-    <h1>Quidnunc RE: Page not found.</h1>
+    <a href="http://www.quidnuncre.com"><h1>Quidnunc RE: Page not found.</h1></a>
   </div>
 
 
